--- a/cloud-consumer-order80/pom.xml
+++ b/cloud-consumer-order80/pom.xml
@@ -15,8 +15,13 @@
     <dependencies>
         <dependency>
             <groupId>com.atguigu.springcloud</groupId>
-            <artifactId>cloud-api-common</artifactId>
+            <artifactId>cloud-api-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-eureka-server -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
         <dependency>
