--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -33,6 +33,10 @@ eureka:
     service-url:
       #      defaultZone: http://localhost:7001/eureka  #单节点
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka  #集群
+  instance:
+    instance-id: payment8002 #在eureka中显示服务别名
+    prefer-ip-address: true #访问信息左下角有ip信息提示
+
 mybatis:
   mapperLocations: classpath:mapper/*.xml
   type-aliases-package: com.atguigu.springcloud.entities
