--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     driver-class-name: org.gjt.mm.mysql.Driver
     url: jdbc:mysql://localhost:3306/db2019?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: 123
+    password: 123456
     #以下为新增
     druid:
       # 指明是否在从池中取出连接前进行检验,如果检验失败, 则从池中去除连接并尝试取出另一个，
@@ -33,6 +33,13 @@ eureka:
     service-url:
       #      defaultZone: http://localhost:7001/eureka  #单节点
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka  #集群
+  instance:
+    # 在eureka中status处的名称
+    instance-id: payment8002
+    # 访问路径可以显示IP地址
+    prefer-ip-address: true
+
+
 mybatis:
   mapperLocations: classpath:mapper/*.xml
   type-aliases-package: com.atguigu.springcloud.entities
