--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -8,6 +8,12 @@ eureka:
     register-with-eureka: false    #表识不向注册中心注册自己
     fetch-registry: false   #表示自己就是注册中心，职责是维护服务实例，并不需要去检索服务
     service-url:
-      defaultZone: http://eureka7002.com:7002/eureka/    #设置与eureka server交互的地址查询服务和注册服务都需要依赖这个地址
-
+#      defaultZone: http://eureka7002.com:7002/eureka/    #设置与eureka server交互的地址查询服务和注册服务都需要依赖这个地址
+      defaultZone: http://eureka7001.com:7001/eureka/    #single
+  server:
+    # 默认true,开启自我保护。关闭自我保护机制，保证不可用服务被及时剔除
+    # （一般生产环境中不会禁止自我保护）
+    enable-self-preservation: true
+    # 间隔时间，默认30秒，改为5秒
+    eviction-interval-timer-in-ms: 5000
 
