--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -31,8 +31,8 @@ eureka:
     register-with-eureka: true  #是否将自己注册到EurekaServer注册中心，默认为true
     fetchRegistry: true   #是否从EurekaServer抓取已有的服务，默认为true，单节点无所谓，生产集群上必须为true才能配合ribbon使用负载均衡
     service-url:
-      defaultZone: http://localhost:7001/eureka  #单节点
-#      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka  #集群
+#      defaultZone: http://localhost:7001/eureka  #单节点
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka  #集群
   instance:
     # 在eureka中status处的名称
     instance-id: payment8001
